6.1.2
  15-11-11
  Improvement
  * #i0036: TypoScript tmp is moved to temp

6.1.1
  15-08-22
  Feature
  * #69258: Backend filter
  Improvement
  * #i0035: Dependency on Browser from version 7.2.6

6.1.0
  15-04-29
  Improvement
  * #i0034: clearing lightbox: update for Browser 7.0.7
            See
            * Configuration/TypoScript
              * events/61826/tx_browser_pi1/constants.ts
              * headquarters/501/tx_browser_pi1/constants.txt
              * news/401/tx_browser_pi1/constants.txt
              * staff/101/tx_browser_pi1/constants.txt
  * #i0033: Update for Caddy 6.1 (mini caddy)
            * columnscontent is moved from CONTENT to COA
            See caddy: #66534

6.0.15
  15-04-20
  Improvement
  * #i0032: YouTube video installation
            See: typo3conf/ext/quick_shop/Ressources/Public/HTML/Youtube/de/150420_typo3_quick_shop_installation.html

6.0.14
  15-04-18
  Improvement
  * #i0031: CSS: .pricing-table .title, a-tag

6.0.13
  15-04-16
  Improvement
  * #i0030: Quick Shop hides all content elements but the Browser plugin and but the HTML CType (is needed for CS for example)
            See: #i0025

  Bugfix
  * #i0029: Remove row class. See: #i0028.
  * #i0028: List view must wrapped with a row class.

6.0.12
  15-04-11
  Improvements
  * #i0027: Updated manual
  * #i0026: Fields are moved
            table tx_quickshop_products
            * category  > tx_quickshop_categories
            * dimension > tx_quickshop_dimension
            * material  > tx_quickshop_material
            Update: Please use SQL statement from
            * Ressources/Private/Upgrades/4x_6x/migration.sql
            BE AWARE: Quick Shop template in DEAL! must adapated. See: Deal! #i0027

6.0.11
  15-03-02
  Improvements
  * #i0025: Quick Shop hides all content elements but the Browser plugin
            * in the single view,
            * or if a pointer is given
            See #i0021/#163

6.0.10
  15-02-17
  New Feature